# converter_real

devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/converter/: imu
devel/lib/pkgconfig/: converter.pc
devel/share/converter/cmake/: converterConfig.cmake
src/converter/: CMakeLists.txt
src/converter/launch/: imu.launch
src/converter/src/: OptitrackHover.cpp  image.cpp  imu_data.cpp  imu_process.cpp  test_imu_filter.cpp
